--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -7,8 +8,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.googlesolutionchallenge"
-        minSdk 21
-        targetSdk 31
+        minSdk 24
+        targetSdk 29
         versionCode 1
         versionName "1.0"
 
@@ -28,11 +29,15 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.firebase:firebase-database:20.0.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.github.User:Repo:Tag'
+    implementation 'io.agora.rtc:full-sdk:3.6.2'
+    implementation 'com.github.AgoraIO-Community.Android-UIKit:final:v4.0.1'
+
 }
